<resources>
    <string name="app_name">rve</string>
    <string name="app_name_extended">Radio Vocea Evangheliei</string>
    <string name="bila_napraznicul">Bila Napraznicul</string>
    <string name="radio_online">Radio Online</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="player">Player</string>
    <string name="radio">Radio</string>
    <string name="inbox">Inbox</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acasa">Acasa</string>
    <string name="home">Home</string>


</resources>