<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/bila"
            app:riv_corner_radius="100dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bila_napraznicul"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_online"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_home"
            android:drawablePadding="10dp"
            android:text="@string/home"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_note"
            android:drawablePadding="10dp"
            android:text="@string/player"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_radio"
            android:drawablePadding="10dp"
            android:text="@string/radio"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menuProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account"
            android:drawablePadding="10dp"
            android:text="@string/profile"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menuNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_notifications"
            android:drawablePadding="10dp"
            android:text="@string/notifications"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
    <!-- ================================================== -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:id="@+id/menuSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_settings"
            android:drawablePadding="10dp"
            android:text="@string/settings"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menuAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_info"
            android:drawablePadding="10dp"
            android:text="@string/about_us"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>